test/log/mac/vnmsac_vv_u16_m.txt
vnmsac_vv_u16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vnmsac_vv_u16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vnmsac_vv_u16_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vnmsac_vv_u16_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vnmsac_vv_u16_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vnmsac_vv_u16_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vnmsac_vv_u16_m.c:22:6: warning: no previous prototype for 'vnmsac_vv_u16_m_golden' [-Wmissing-prototypes]
   22 | void vnmsac_vv_u16_m_golden(bool32_t mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vnmsac_vv_u16_m.c: In function 'vnmsac_vv_u16_m_golden':
vnmsac_vv_u16_m.c:22:77: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vnmsac_vv_u16_m_golden(bool32_t mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                                                                   ~~~~~~~~~~^
vnmsac_vv_u16_m.c: In function 'main':
vnmsac_vv_u16_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vnmsac_vv_u16_m.c:48:28: error: incompatible type for argument 1 of 'vnmsac_vv_u16_m_golden'
   48 |     vnmsac_vv_u16_m_golden(exp_mask,exp_a,exp_b,exp_c,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vnmsac_vv_u16_m.c:22:38: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vnmsac_vv_u16_m_golden(bool32_t mask,uint16_t *a,uint16_t *b,uint16_t *c,uint16_t *exp_result) {
      |                             ~~~~~~~~~^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vnmsac_vv_u16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vnmsac_vv_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vnmsac_vv_u16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vnmsac_vv_u16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed